--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 			<form action="mail.php"  method="post" id="callback_form">
 				<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="Волшебный пинок">
-			<input type="hidden" name="admin_email" value="andriy.zhuravlov@gmail.com">
+			<input type="hidden" name="admin_email" value="admin@18camel.com">
 			<input type="hidden" name="form_subject" value="Регистрация с сайта">
 
 				<div class="col-xs-12 col-sm-6">
